[project]
name = "branch-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Amy Opas", email = "amy.opas@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessed (>=1.23.0,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.ruff]
select = ["I"]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-lsp-server (>=1.13.1,<2.0.0)"
]
